v1.0.0/modules/schema/pages/class/ExtensionItem.adoc
= `ExtensionItem`
:toclevels: 4


+++Specifies the extensions list items+++


[cols="h,3",width=65%]
|===
| Type
| Class

| URI
| `cim:ExtensionItem`


| CIM standard (perspective)
| IEC61968 (Enterprise)



|===

== Class hierarchy
* *`ExtensionItem`*


== Slots




[cols="3,1,3,6",width=100%]
|===
| Name | Cardinality | Type | Description

| <<extName,`extName`>>
| 0..1
| https://w3id.org/linkml/String[`string`]
| +++the name of the extension+++

| <<extType,`extType`>>
| 0..1
| https://w3id.org/linkml/String[`string`]
| +++The type of the extension+++

| <<extValue,`extValue`>>
| 0..1
| https://w3id.org/linkml/String[`string`]
| +++the value of the extension+++
|===

'''


//[discrete]
[#extName]
=== `extName`
+++the name of the extension+++

[cols="h,4",width=65%]
|===
| URI
| `cim:ExtensionItem.extName`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]


|===

//[discrete]
[#extType]
=== `extType`
+++The type of the extension+++

[cols="h,4",width=65%]
|===
| URI
| `cim:ExtensionItem.extType`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]


|===

//[discrete]
[#extValue]
=== `extValue`
+++the value of the extension+++

[cols="h,4",width=65%]
|===
| URI
| `cim:ExtensionItem.extValue`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]


|===


